2006-01-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/project.py:
	* lib/gaupol/gtk/application.py:
	* lib/gaupol/gtk/cellrend/integer.py:
	* lib/gaupol/gtk/cellrend/multiline.py:
	* lib/gaupol/gtk/cellrend/time.py:
	* lib/gaupol/gtk/entries/integer.py:
	* lib/gaupol/gtk/entries/time.py:
	* lib/gaupol/gtk/output.py:
	* lib/gaupol/gtk/page.py:
	* lib/gaupol/gtk/util/config.py:
	* lib/gaupol/gtk/util/gtklib.py:
	* lib/gaupol/gtk/view.py:
	  Added or fixed testing.

	* lib/gaupol/test/__init__.py:
	  (Test.assert_store): New method.

2006-01-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/clipboard.py:
	* lib/gaupol/base/files/determiner.py:
	* lib/gaupol/base/files/microdvd.py:
	* lib/gaupol/base/files/mpl2.py:
	* lib/gaupol/base/files/subrip.py:
	* lib/gaupol/base/files/subviewer2.py:
	* lib/gaupol/base/model.py:
	* lib/gaupol/base/project.py:
	* lib/gaupol/base/tags/converter.py:
	* lib/gaupol/base/text/parser.py:
	* lib/gaupol/base/timing/calc.py:
	* lib/gaupol/base/util/encodinglib.py:
	* lib/gaupol/base/util/langlib.py:
	* lib/gaupol/base/util/listlib.py:
	* lib/gaupol/base/util/wwwlib.py:
	  Adapted testing to changes in gaupol.test.Test class and made some
	  cosmetic changes.

2006-01-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/edit.py:
	* lib/gaupol/base/delegates/fileopen.py:
	* lib/gaupol/base/delegates/filesave.py:
	* lib/gaupol/base/delegates/format.py:
	* lib/gaupol/base/delegates/preview.py:
	  Added testing.

	* lib/gaupol/test/__init__.py:
	  Cosmetic changes.

2006-01-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/action.py:
	* lib/gaupol/base/delegates/frconv.py:
	* lib/gaupol/base/delegates/preview.py:
	* lib/gaupol/base/delegates/stat.py:
	  Added testing.

	* lib/gaupol/base/delegates/stat.py:
	  (StatisticsDelegate.get_character_count): Do not count newline to
	  total length.

	* lib/gaupol/test/__init__.py:
	  (Test): Redone again.
